--- a/login.html
+++ b/login.html
@@ -15,10 +15,10 @@ Welcome to Learn.io
 </div>
   <div class="login-container">
          <form id="login-form">
-             <label for="email">Member Email</label>
+             <label for="email">Member Email (USE:user@example.com)</label>
              <input type="email" id="email" required>
 
-             <label for="password">Password</label>
+             <label for="password">Password (USE: password123)</label>
              <input type="password" id="password" required>
 
              <a href="#" class="help-link">Forgot password?</a>
@@ -50,3 +50,4 @@ Welcome to Learn.io
    </footer>
  </body>
  </html>
+
